[gd_scene load_steps=4 format=3 uid="uid://cobnluovpckpi"]

[ext_resource type="Script" uid="uid://thx83cf6ghwi" path="res://Scripts/textbox.gd" id="1_i40gg"]
[ext_resource type="FontFile" uid="uid://cejbo1ev5c0n2" path="res://Assets/Fonts/Jersey15-Regular.ttf" id="2_yyjux"]
[ext_resource type="Texture2D" uid="uid://dsq3td880rt1c" path="res://Assets/Textbox Textures/DefaultTextbox.png" id="3_yyjux"]

[node name="Textbox" type="Control"]
layout_mode = 3
anchor_left = -0.083
anchor_top = -0.25
anchor_right = 0.917
anchor_bottom = 0.75
offset_left = 79.68
offset_top = 80.0
offset_right = -1040.26
offset_bottom = -402.032
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i40gg")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = -0.160004
offset_right = 959.84
offset_bottom = 320.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(960, 320)
render_target_update_mode = 4

[node name="CharacterTimer" type="Timer" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="LineTimer" type="Timer" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="CustomTimer" type="Timer" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="Text" type="RichTextLabel" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
z_index = 7
offset_left = 336.0
offset_top = 33.0
offset_right = 928.0
offset_bottom = 473.0
theme_override_fonts/normal_font = ExtResource("2_yyjux")
theme_override_fonts/italics_font = ExtResource("2_yyjux")
theme_override_fonts/bold_italics_font = ExtResource("2_yyjux")
theme_override_fonts/bold_font = ExtResource("2_yyjux")
theme_override_font_sizes/bold_italics_font_size = 60
theme_override_font_sizes/italics_font_size = 60
theme_override_font_sizes/mono_font_size = 60
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "Uh oh"
scroll_active = false

[node name="Prefixes" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="Prefix" type="Sprite2D" parent="SubViewportContainer/SubViewport/Prefixes"]
position = Vector2(303.97, 63.016)

[node name="Prefix2" type="Sprite2D" parent="SubViewportContainer/SubViewport/Prefixes"]
position = Vector2(303.97, 124.016)

[node name="Prefix3" type="Sprite2D" parent="SubViewportContainer/SubViewport/Prefixes"]
position = Vector2(303.97, 185.016)

[node name="Prefix4" type="Sprite2D" parent="SubViewportContainer/SubViewport/Prefixes"]
position = Vector2(303.97, 246.016)

[node name="Textbox" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
z_index = -1
position = Vector2(480, 160)
texture = ExtResource("3_yyjux")

[node name="DialogIcon" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
z_index = 2
position = Vector2(48, 48)

[node name="Icon" type="Sprite2D" parent="SubViewportContainer/SubViewport/DialogIcon"]
unique_name_in_owner = true
position = Vector2(104, 104)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(479.84, 160)
